crates/outbox-publisher/tests/ui/03_no_aggregate_id_field.rs
use outbox_publisher_derive::DomainEvent;
use uuid::Uuid;

#[derive(DomainEvent)]
#[event(kind = "user.registered@v1", aggregate = "user")]
pub struct UserRegistered {
    pub user_id: Uuid,
    pub email: String,
}

fn main() {}
